--- a/My_Web_Page/Contact.html
+++ b/My_Web_Page/Contact.html
@@ -7,7 +7,7 @@
 <header>
 	<nav>
 		<div id="Home" style="font-size:25px">
-			<a href="C:\Users\Sam\coursera-test\My Web Page\My Web Page.html">Home</a>
+			<a href="C:\Users\Sam\coursera-test\My Web Page\Home.html">Home</a>
 		</div>
 	</nav>
 <body>
