--- a/My_Web_Page/Home.html
+++ b/My_Web_Page/Home.html
@@ -11,7 +11,7 @@
 	<span style="font-size:50px"> <u>Samantha Menezes</u> </span>
 		<nav>
 			<div id="Home" style="font-size:25px">
-				<a href="C:\Users\Sam\coursera-test\My Web Page\My Web Page.html">Home</a>
+				<a href="C:\Users\Sam\coursera-test\My Web Page\Home.html">Home</a>
 			</div>
 			<div id="Contact" style="font-size:25px">
 				<a href="C:\Users\Sam\coursera-test\My Web Page\Contact.html">Contact</a>
