--- a/My_Web_Page/Home.html
+++ b/My_Web_Page/Home.html
@@ -5,7 +5,7 @@
 	<title>This is My WebPage.</title>
 </head>
 <header>
-	<img src="C:\Users\Sam\Desktop\SM.png" 
+	<img src="C:\Users\Sam\coursera-test\My_Web_Page\SM.png" 
 	alt="this is a logo with SM"
 	height="75 px" width="100 px">
 	<span style="font-size:50px"> <u>Samantha Menezes</u> </span>
