--- a/My_Web_Page/Home.html
+++ b/My_Web_Page/Home.html
@@ -7,14 +7,14 @@
 <header>
 	<img src="C:\Users\Sam\coursera-test\My_Web_Page\SM.png" 
 	alt="this is a logo with SM"
-	height="75 px" width="100 px">
+	height="75 px" width="100 px"/>
 	<span style="font-size:50px"> <u>Samantha Menezes</u> </span>
 		<nav>
 			<div id="Home" style="font-size:25px">
-				<a href="C:\Users\Sam\coursera-test\My Web Page\Home.html">Home</a>
+				<a href="C:\Users\Sam\coursera-test\My_Web_Page\Home.html">Home</a>
 			</div>
 			<div id="Contact" style="font-size:25px">
-				<a href="C:\Users\Sam\coursera-test\My Web Page\Contact.html">Contact</a>
+				<a href="C:\Users\Sam\coursera-test\My_Web_Page\Contact.html">Contact</a>
 			</div>
 		</nav>
 	</span>
