--- a/My_Web_Page/Home.html
+++ b/My_Web_Page/Home.html
@@ -5,16 +5,16 @@
 	<title>This is My WebPage.</title>
 </head>
 <header>
-	<img src="C:\Users\Sam\coursera-test\My_Web_Page\SM.png" 
+	<img src="https://github.com/SamMenez/coursera-test/blob/main/My_Web_Page/SM.png" 
 	alt="this is a logo with SM"
 	height="75 px" width="100 px"/>
 	<span style="font-size:50px"> <u>Samantha Menezes</u> </span>
 		<nav>
 			<div id="Home" style="font-size:25px">
-				<a href="C:\Users\Sam\coursera-test\My_Web_Page\Home.html">Home</a>
+				<a href="https://github.com/SamMenez/coursera-test/blob/main/My_Web_Page/Home.html">Home</a>
 			</div>
 			<div id="Contact" style="font-size:25px">
-				<a href="C:\Users\Sam\coursera-test\My_Web_Page\Contact.html">Contact</a>
+				<a href="https://github.com/SamMenez/coursera-test/blob/main/My_Web_Page/Contact.html">Contact</a>
 			</div>
 		</nav>
 	</span>
