--- a/My_Web_Page/Contact.html
+++ b/My_Web_Page/Contact.html
@@ -7,7 +7,7 @@
 <header>
 	<nav>
 		<div id="Home" style="font-size:25px">
-			<a href="https://github.com/SamMenez/coursera-test/blob/main/My_Web_Page/Home.html">Home</a>
+			<a href="https://sammenez.github.io/coursera-test/My_Web_Page/Home.html">Home</a>
 		</div>
 	</nav>
 <body>
